Converted from Gulp to Webpack

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css">
+
   </head>
   <body>
-    <div id="App">Ugh</div>
-    <script src="./renderer.js"></script>
+    <div id="App">Oh no.</div>
   </body>
 </html>
